--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="header">
+        <div class="left-content">
+            Header Logo
+        </div>
+        <div class="right-content">
+            <ul>
+                <li><a href="google.com">header link one</a></li>
+                <li><a href="google.com">header link two</a></li>
+                <li><a href="google.com">header link three</a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
