Add content and pic to body

--- a/index.html
+++ b/index.html
@@ -20,5 +20,21 @@
             </ul>
         </div>
     </div>
+    <div class="body">
+        <div class="left-body">
+            <div class="body-header">
+                This website is awesome
+            </div>
+            <div class="body-text">
+                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+            </div>
+            <div class="body-signup">
+                <button>Sign up</button>
+            </div>
+        </div>
+        <div class="right-body">
+            <img src="office.jpg" class="office">
+        </div>
+    </div>
 </body>
 </html>
